--- a/style.css
+++ b/style.css
@@ -2,15 +2,22 @@ body{
     background-color: black;
 }
 
-img{
-    display: block;
-    margin: 20px auto 20px auto;
-    background-color: white;
-    padding: 4px;
-}
-
 h1{
     margin: auto;
     text-align: center;
     color: white;
+}
+
+.poster {
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 2%;
+  color: white;
+  font-family: "Libre Baskerville", serif;
+  text-align: center;
+}
+
+img{
+    border: 5px solid white;
+    width: 100%;
 }
